kustomize/overlays/scots-lab/apps/adguard-home/route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: adguard-home
  namespace: adguard-home
spec:
  parentRefs:
    - name: kgateway-http
      namespace: kgateway-system
  hostnames:
    - adguard.srbii.com
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: adguard-home-main
          port: 80
